# tennis_analysis

./: .gitignore  ball_detection_optimizer.py  download_youtube.py  ideas.txt  main.py  pyproject.toml
court_line_detector/: court_line_detector.py
mini_court/: mini_court.py
tracker_stubs/: ball_detections.pkl  player_detections.pkl
trackers/: player_tracker.py
utils/: __init__.py  player_stats_drawer_utils.py  video_utils.py
