[project]
name = "tennis-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "lap>=0.5.12",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "ultralytics>=8.3.69",
    "yt-dlp>=2025.6.9",
]
